# translate-ai-pdf

./: .env.example  .gitignore  Makefile  README copy.md  README.md  app.py  config.py  constants.py  create_test_arabic_pdf.py  package.json  pyproject.toml  test_api_key.py  test_pdf_generator.py  test_pdf_visual.py  test_translation.py  translations.py
.streamlit/: config.toml
docs/: RESEARCH_SUMMARY.md
docs/best_practices/: paragraph_splitting.md
docs/research/: benchmark_results.json  benchmark_results.md  current_implementation_analysis.md  library_comparison.md  paragraph_splitting_research.md
services/: __init__.py  error_handler.py  input_validator.py  pdf_service.py  progress_service.py  translation_service.py  ui_components.py
tests/: benchmark_paragraph_splitting.py  test_paragraph_splitting.py
tests/test_data/paragraph_splitting/: large_single_paragraph.txt  mixed_formatting.txt  verse_numbered.txt  well_formatted.txt
utils/: __init__.py  cost_calculator.py  logger_config.py  pdf_generator.py  pdf_processor.py  progress_storage.py  token_calculator.py  translator.py
utils/experimental/: paragraph_splitters.py
